@@ -5,6 +5,8 @@ import jakarta.servlet.annotation.WebFilter;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import jakarta.servlet.http.HttpSession;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import ru.vsu.amm.java.entities.User;
 
 import java.io.IOException;
@@ -13,40 +15,40 @@ import java.util.List;
 
 @WebFilter("/*")
 public class AuthFilter implements Filter {
-
-    private static final List<String> ALLOWED_PATHS = Arrays.asList(
+    private static final Logger logger = LoggerFactory.getLogger(AuthFilter.class);
+    private final List<String> allowedPaths = List.of(
+            "/",
+            "",
+            "/home",
             "/auth/login",
-            "/auth/logout",
-            "/static/",
-            "/register",
-            "/css/",
-            "/js/"
+            "/login.jsp",
+            "/auth/register",
+            "/register.jsp"
     );
 
-
     @Override
-    public void doFilter(ServletRequest request, ServletResponse response, FilterChain chain)
-            throws IOException, ServletException {
-        HttpServletRequest httpRequest = (HttpServletRequest) request;
-        HttpServletResponse httpResponse = (HttpServletResponse) response;
-        HttpSession session = httpRequest.getSession(false);
+    public void doFilter(ServletRequest request, ServletResponse response, FilterChain filterChain) throws IOException, ServletException {
+        HttpServletRequest req = (HttpServletRequest) request;
+        HttpServletResponse resp = (HttpServletResponse) response;
 
-        String path = httpRequest.getRequestURI().substring(httpRequest.getContextPath().length());
+        String path = req.getRequestURI().substring(req.getContextPath().length());
+        HttpSession session = req.getSession(false);
 
-        boolean isAllowedPath = ALLOWED_PATHS.stream().anyMatch(path::startsWith);
+        boolean loggedIn = session != null && session.getAttribute("user") != null;
+        boolean isAllowedPath = allowedPaths.contains(path);
 
-        if (isAllowedPath) {
-            chain.doFilter(request, response);
-            return;
+        logger.info("Request received: method={}, path={}, loggedIn={}", req.getMethod(), path, loggedIn);
+
+        if (loggedIn || isAllowedPath) {
+            User user = null;
+            if (session != null) {
+                user = (User) session.getAttribute("user");
+            }
+            logger.info("Access granted: path={} (loggedIn={}, allowed={}) user={}", path, loggedIn, isAllowedPath, user);
+            filterChain.doFilter(request, response);
+        } else {
+            logger.info("Unauthorized access attempt: path={}", path);
+            resp.sendRedirect("/auth/login");
         }
-
-        User loggedInUser = (session != null) ? (User) session.getAttribute("user") : null;
-
-        if (loggedInUser == null) {
-            httpResponse.sendRedirect(httpRequest.getContextPath() + "/auth/login");
-            return;
-        }
-
-        chain.doFilter(request, response);
     }
 }
